# ESP32_4CH_DSP_BT_AMPLIFIER

./: README.md  commands.txt
esp-idf firmware/: README.md  partitions.csv  sdkconfig  sdkconfig.old  sdkconfigbt
esp-idf firmware/main/: CMakeLists.txt  MA120x0.c  MA120x0.h  bt_app_av.c  bt_app_core.c  bt_app_core.h  dsp.c  dsp.h  dsps.h  main.c  server.c  server.h  sysmgmt.c  sysmgmt.h
gui tool/: dsp_gui.sln
gui tool/dsp_gui/: DSPPlotter.cs  Encrypt.cs  FileSaveLoad.cs  LimiterCalc.Designer.cs  LimiterCalc.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  StringFIFO.cs  TCP_Connect.cs  dsp_gui.csproj
gui tool/dsp_gui/Properties/: AssemblyInfo.cs
